feat: implement paginated message fetch API with before timestamp and limit